# skillsLocalManager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: tauri-release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  agentStatus.ts  i18n.ts  index.css  types.ts
frontend/src/components/: ClaudeInitBanner.tsx  RegistrySkillDetail.tsx  SkillCard.tsx  SkillDetail.tsx  TargetPickerModal.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/services/: agent_detector.rs  claude_bootstrap.rs  clawhub.rs  cover_history.rs  git.rs  managed_skills.rs  md_parser.rs  mod.rs  scanner.rs  symlink.rs  sync.rs  translator.rs  tree_hash.rs
