[package]
name = "skills-local-manager"
version = "0.1.2"
description = "skillsLocalManager - Tauri Desktop App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-openai = { version = "0.33", features = ["chat-completion", "byot"] }

dirs = "5.0"
dunce = "1.0"
git2 = "0.19"
walkdir = "2.5"
junction = "1.0"
which = "6.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
window-vibrancy = "0.5"
sha2 = "0.10"

[lib]
name = "skills_local_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "skills-local-manager"
path = "src/main.rs"
